@@ -60,13 +60,13 @@ sub page {
       [ type      => serialize => sub { mt "_ptype_$_[0]" } ],
       [ name      => diff => 1 ],
       [ original  => diff => 1 ],
-      [ alias     => diff => 1 ],
+      [ alias     => diff => qr/[ ,\n\.]/ ],
       [ lang      => serialize => sub { "$_[0] (".mt("_lang_$_[0]").')' } ],
       [ website   => diff => 1 ],
       [ l_wp      => htmlize => sub {
         $_[0] ? sprintf '<a href="http://en.wikipedia.org/wiki/%s">%1$s</a>', xml_escape $_[0] : mt '_revision_nolink'
       }],
-      [ desc      => diff => 1 ],
+      [ desc      => diff => qr/[ ,\n\.]/ ],
       [ relations   => join => '<br />', split => sub {
         my @r = map sprintf('%s: <a href="/p%d" title="%s">%s</a>',
           mt("_prodrel_$_->{relation}"), $_->{id}, xml_escape($_->{original}||$_->{name}), xml_escape shorten $_->{name}, 40
